Minor fixes in both Ecommerce and Warehouse projects Imported from Changeset 2286

--- a/WMS/Views/Products/Edit.cshtml
+++ b/WMS/Views/Products/Edit.cshtml
@@ -547,7 +547,7 @@ settings =>
                     </div>
                 </div>
                 <div class="input-group h-100 justify-content-center align-items-center" id="dvkit">
-                    @Html.LabelFor(model => model.Kit, htmlAttributes: new { @class = "col-md-4" })
+                    @Html.Label("Product Kit Items", htmlAttributes: new { @class = "col-md-4" })
                     <div class="col-md-8">
 
                         @Html.Action("_ProductKitCombobox", new { ProductId = Model.ProductId })
