--- a/WMS/Views/Shared/_LocationEdit.cshtml
+++ b/WMS/Views/Shared/_LocationEdit.cshtml
@@ -23,9 +23,9 @@
         <div class="input-group h-100 justify-content-center align-items-center">
             @Html.Label("Location Products", htmlAttributes: new { @class = "col-md-4" })
             <div class="col-md-8">
-                <div>
-                    @Html.ListBox("ProductIds", new MultiSelectList(ViewBag.Products, "ProductId", "Name", ViewBag.ProductIds), new { Multiple = "multiple", size = "5", @class = "chosen-select", data_placeholder = "Choose Products" })
-
+                <div class="col-md-8">
+                    @Html.Action("_ProductKitCombobox", "Products")
+                    @Html.Hidden("ProductKit")
                 </div>
             </div>
         </div>
@@ -103,14 +103,14 @@
         </div>
 
         <div class="input-group h-100 justify-content-center align-items-center">
-            <label class ="col-md-4">Location Code<span style="color:red"> *</span></label>
+            <label class="col-md-4">Location Code<span style="color:red"> *</span></label>
             <div class="col-md-8">
                 @Html.EditorFor(m => m.LocationCode)
                 @Html.ValidationMessageFor(model => model.LocationCode)
             </div>
         </div>
         <div class="input-group h-100 justify-content-center align-items-center">
-            <label class ="col-md-4">Location Name<span style="color:red"> *</span></label>
+            <label class="col-md-4">Location Name<span style="color:red"> *</span></label>
             <div class="col-md-8">
                 @Html.EditorFor(m => m.LocationName)
                 @Html.ValidationMessageFor(model => model.LocationName)
