--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopProductPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopProductPartial.cshtml
@@ -4,7 +4,7 @@
     <div class="col-md-12">
         <div class="tabpro">
             <div class="tab-head xs-tab">
-                <h1 class="pull-left">
+                <h1 class="pull-left mb-25">
                     <span>
                         top product
                         <i></i>
