--- a/WarehouseEcommerce/Areas/Shop/Views/Orders/ConfirmOrder.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Orders/ConfirmOrder.cshtml
@@ -16,9 +16,9 @@
     }
 </style>
 <div class="about bg-white">
-    <div class="container">
+    <div class="container custom-max-width">
         <div class="row">
-            <div class="col-md-8 col-sm-8 bg-white my-account login">
+            <div class="col-md-8 col-sm-8 bg-white my-account login confirm-order">
                 <div class="about-cnt">
                     <div class="content-wrapper select">
                         @if (ViewBag.Addresses != null)
@@ -28,9 +28,9 @@
                                 <div class="row">
                                     @if (address.ElementAtOrDefault(i) != null)
                                     {
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-sm-6">
                                             <h2 class="text-uppercase"> Billing Address</h2>
-                                            <hr>
+                                            <hr class="custom-hr">
                                             <p>
                                                 @if (!string.IsNullOrEmpty(address[i].AddressLine1))
                                                 {
@@ -59,9 +59,9 @@
                                     }
                                     @if (address.ElementAtOrDefault(i + 1) != null)
                                     {
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-sm-6">
                                             <h2 class="text-uppercase"> Shipping Address</h2>
-                                            <hr>
+                                            <hr class="custom-hr">
                                             <div class="w-25 p-3">
                                                 <p>
                                                     @if (!string.IsNullOrEmpty(address[i + 1].AddressLine1))
@@ -98,11 +98,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-4 bg-white my-account login">
+            <div class="col-md-4 col-sm-12 bg-white my-account login">
                 <div class="about-cnt">
                     <div class="content-wrapper select">
                         <h2 class="text-uppercase"> Items Detail</h2>
-                        <hr>
+                        <hr class="custom-hr">
                         <table class="order-details" style="border-collapse:unset">
                             @foreach (var item in Model)
                             {
@@ -111,7 +111,7 @@
 
                                     <tr>
 
-                                        <td> <a href=""> <img src="/UploadedFiles/Products/no-image.png" alt="@(item?.ProductMaster?.Name)"> </a> </td>
+                                        <td> <a href=""> <img src="/Areas/Shop/Content/app/img/product/no_image.gif" alt="@(item?.ProductMaster?.Name)"> </a> </td>
                                         <td>
                                             <div class="ordered-items">
                                                 <p>
@@ -133,19 +133,17 @@
                                 </tbody>
                             }
                         </table>
-                        <div class="button-submit">
-                            <div class="pull-right">
+                            <div class="pull-left orders-total">
                                 @if (Model.ToList().Count > 0)
                                 {
-                                    <h3> Total Quantity: @(Model == null ? 0 : Model.ToList().Count) </h3>
+                                    <b> Total Quantity: @(Model == null ? 0 : Model.ToList().Count) </b>
                                 }
                                 @if (ViewBag.TotalQty != null && (int)ViewBag.TotalQty > 0)
                                 {
-                                    <h3> Total: @(ViewBag.TotalQty == null ? 0 : ViewBag.TotalQty) </h3>
+                                    <b> Total: @(ViewBag.TotalQty == null ? 0 : ViewBag.TotalQty) </b>
                                 }
                             </div>
 
-                        </div>
                     </div>
                 </div>
             </div>
@@ -157,18 +155,12 @@
                 <div class="col-md-8 col-sm-8 bg-white my-account login">
                     <div class="about-cnt">
                         <div class="content-wrapper select">    
-                            <div class="shippingMethod">
+                            <div class="shippingMethod shiping-method-2">
                                 @if ((int)ViewBag.ShipmentMethod == 2)
                                 {
                                     <div class="form-check-inline">
                                         <label class="control-label" for="radio2">
-                                            <input type="radio" class="form-check-input" id="radio2" name="optradio" value="2" checked> By Delivery
-                                        </label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                        <label class="control-label">
-                                            Carrier
-                                        </label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                        <label class="control-label">
-                                            $10
+                                            <input type="radio" class="form-check-input" id="radio2" name="optradio" value="2" checked> Delivery (Courier) $10
                                         </label>
                                     </div>
                                 }
@@ -176,13 +168,7 @@
                                 {
                                     <div class="form-check-inline">
                                         <label class="control-label" for="radio1">
-                                            <input type="radio" class="form-check-input" id="radio1" name="optradio" value="1" checked> By Shop
-                                        </label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                        <label class="control-label">
-                                            Pick up in-store
-                                        </label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                        <label class="control-label">
-                                            Free
+                                            <input type="radio" class="form-check-input" id="radio1" name="optradio" value="1" checked> Pick up (From Store) Free
                                         </label>
                                     </div>
                                 }
